cmake_minimum_required(VERSION 3.24)
project(minesweeper)

set(CMAKE_CXX_STANDARD 14)

add_executable(minesweeper src/main.cpp src/WelcomeWindow.cpp src/WelcomeWindow.h src/WelcomeWindow.h src/WelcomeWindow.cpp src/GameBoard.cpp src/GameBoard.h src/LeaderBoard.cpp src/LeaderBoard.h src/random.cpp)

set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_DIR C:/SFML/lib/cmake/SFML)
find_package(SFML COMPONENTS system window graphics audio network REQUIRED)

include_directories(c:/SFML/include/SFML)
target_link_libraries(minesweeper sfml-system sfml-window sfml-graphics sfml-audio)